--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="button_strip_metadata">Strip Metadata</string>
     <string name="button_save_image">Save Image</string>
     <string name="button_share">Share</string>
+    <string name="button_edit_image">Edit Image</string>
     <string name="button_start_over">Start Over</string>
     <string name="button_ok">OK</string>
     <string name="share_image">Share Image</string>
