Add name field for saving image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="button_clean_metadata">Clean Metadata</string>
     <string name="button_strip_metadata">Strip Metadata</string>
     <string name="button_save_image">Save Image</string>
+    <string name="button_save">Save</string>
+    <string name="button_cancel">Cancel</string>
     <string name="button_share">Share</string>
     <string name="button_edit_image">Edit Image</string>
     <string name="button_start_over">Start Over</string>
@@ -17,6 +19,7 @@
     <!-- Image Labels -->
     <string name="label_original_image">Original Image</string>
     <string name="label_cleaned_image">✓ Cleaned Image</string>
+    <string name="label_filename">Filename</string>
     <string name="content_desc_original_image">Original image</string>
     <string name="content_desc_cleaned_image">Cleaned image</string>
 
@@ -29,6 +32,10 @@
     <!-- Dialog Titles -->
     <string name="dialog_title_error">Error</string>
     <string name="dialog_title_success">Success</string>
+    <string name="dialog_title_save_image">Save Image</string>
+
+    <!-- Dialog Messages -->
+    <string name="dialog_message_enter_filename">Enter a name for the file (without extension)</string>
 
     <!-- Messages -->
     <string name="image_saved_to">Image saved to:\n%1$s</string>
