--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="button_start_over">Start Over</string>
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
+    <string name="button_show_metadata">Show Metadata</string>
+    <string name="button_close_metadata">Close Metadata</string>
     <string name="share_image">Share Image</string>
 
     <!-- Image Labels -->
